<resources>
    <string name="app_name">DemoApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="please_login_to_access_all_app_features">Please login to access all app features!</string>
    <string name="signin">Sign in with Google</string>
    <string name="title_profile">Profile</string>
    <string name="username">Guest</string>
    <string name="settings">Settings</string>
    <string name="email" />
    <string name="sign_out">Sign out</string>
    <string name="welcome">Welcome!</string>
    <string name="app_version">1.0</string>
</resources>