<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Big Box for Profile Info -->
    <LinearLayout
        android:id="@+id/profile_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints">

        <!-- Circular Profile Image -->
        <ImageView
            android:id="@+id/profile_image"
            android:tag="Default"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:contentDescription="@string/username"
            android:src="@drawable/ic_profile_black_24dp"
            android:background="@drawable/circle"
            android:scaleType="centerCrop"
            android:clipToOutline="true"
            />

        <!-- Username TextView -->
        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/username"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            />
    </LinearLayout>

    <!-- Bottom Section for Settings and Signout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <!-- Settings Layout -->
        <LinearLayout
            android:id="@+id/settings_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@+id/settings_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/settings"
                android:src="@drawable/ic_settings_black_24dp"
                android:layout_marginEnd="8dp"
                />

            <TextView
                android:id="@+id/settings_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

        <!-- Signout Layout -->
        <LinearLayout
            android:id="@+id/signout_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@+id/signout_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/sign_out"
                android:src="@drawable/ic_signout_black_24dp"
                android:layout_marginEnd="8dp"
                />

            <TextView
                android:id="@+id/signout_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/appversion_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/appversion_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/cardview_shadow_start_color"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
